src/main/java/com/example/finance7/error/exceptions/ProductNotFoundException.java
package com.example.finance7.error.exceptions;

public class ProductNotFoundException extends RuntimeException{
}
